[gd_scene load_steps=7 format=3 uid="uid://biwrg4k20l68n"]

[ext_resource type="Script" uid="uid://dtjimtxj1mf2f" path="res://Shops/shop_modal.gd" id="1_3c770"]
[ext_resource type="Texture2D" uid="uid://8a3kflhvatkp" path="res://assets/Shop.png" id="1_ruyqg"]
[ext_resource type="PackedScene" uid="uid://btffc7vqohcgl" path="res://Shops/shop_item.tscn" id="2_nc2er"]
[ext_resource type="Texture2D" uid="uid://mk8pwcc2cwgv" path="res://art/BuyButton.png" id="4_q8nhw"]
[ext_resource type="FontFile" uid="uid://b1u0jrp7i0n3a" path="res://assets/alagard.ttf" id="4_ywokf"]

[sub_resource type="LabelSettings" id="LabelSettings_3c770"]

[node name="ShopModal" type="CanvasLayer"]
script = ExtResource("1_3c770")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(240, 134)
texture = ExtResource("1_ruyqg")

[node name="ShopText" type="Label" parent="."]
offset_left = 35.0
offset_top = 180.0
offset_right = 208.0
offset_bottom = 261.0
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("4_ywokf")
theme_override_font_sizes/font_size = 16
text = "hi"
label_settings = SubResource("LabelSettings_3c770")
horizontal_alignment = 3
autowrap_mode = 3

[node name="Buy" type="TextureButton" parent="."]
offset_left = 405.0
offset_top = 180.0
offset_right = 473.0
offset_bottom = 210.0
scale = Vector2(0.795494, 0.9533)

[node name="Sprite2D" type="Sprite2D" parent="Buy"]
position = Vector2(23.6994, 19.9308)
texture = ExtResource("4_q8nhw")

[node name="Cost" type="Label" parent="."]
offset_left = 34.0
offset_top = 182.0
offset_right = 212.0
offset_bottom = 202.0
theme_override_colors/font_color = Color(0.929385, 0.995261, 0, 1)
theme_override_fonts/font = ExtResource("4_ywokf")
text = "Item"
autowrap_mode = 2

[node name="Item Description" type="Label" parent="."]
offset_left = 34.0
offset_top = 202.0
offset_right = 212.0
offset_bottom = 238.0
theme_override_fonts/font = ExtResource("4_ywokf")
autowrap_mode = 2

[node name="Powerup Description" type="Label" parent="."]
offset_left = 34.0
offset_top = 240.0
offset_right = 209.0
offset_bottom = 263.0
scale = Vector2(0.995493, 0.98252)
theme_override_colors/font_color = Color(7.07522e-06, 0.708273, 3.85046e-07, 1)
theme_override_fonts/font = ExtResource("4_ywokf")
autowrap_mode = 2

[node name="ShopItem" parent="." instance=ExtResource("2_nc2er")]
offset_left = 227.0
offset_top = 179.0
offset_right = 227.0
offset_bottom = 219.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 1)
item_name = ""
description = ""
cost = 1
powerup_type = ""

[node name="ShopItem2" parent="." instance=ExtResource("2_nc2er")]
offset_left = 268.0
offset_top = 179.0
offset_right = 268.0
offset_bottom = 219.0
scale = Vector2(1, 1)
pivot_offset = Vector2(2, 2)

[node name="ShopItem3" parent="." instance=ExtResource("2_nc2er")]
offset_left = 309.0
offset_top = 179.0
offset_right = 309.0
offset_bottom = 219.0
scale = Vector2(1, 1)
pivot_offset = Vector2(1, 1)

[node name="ShopItem4" parent="." instance=ExtResource("2_nc2er")]
offset_left = 350.0
offset_top = 179.0
offset_right = 350.0
offset_bottom = 219.0
scale = Vector2(1, 1)

[connection signal="pressed" from="Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="ShopItem" to="." method="_on_shop_item_pressed"]
[connection signal="pressed" from="ShopItem2" to="." method="_on_shop_item_2_pressed"]
[connection signal="pressed" from="ShopItem3" to="." method="_on_shop_item_3_pressed"]
[connection signal="pressed" from="ShopItem4" to="." method="_on_shop_item_4_pressed"]
